snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
eff482c765539f241892ef110fd0a7496401d30d